# P1_MIA_202003894

./: CMakeLists.txt  README.md  main.cpp
Analizador/: Analizador.cpp  Analizador.h
Estructuras y Objetos/: AdminUsuario.cpp  AdminUsuario.h  Disco.cpp  Disco.h  Estructura.h  GestorArchivos.cpp  GestorArchivos.h  ListaMount.cpp  ListaMount.h  NodoMount.cpp  NodoMount.h  Particion.cpp  Particion.h  Reporte.cpp  Reporte.h  Usuario.cpp  Usuario.h
