cmake_minimum_required(VERSION 3.24)
project(P1_MIA_202003894)

set(CMAKE_CXX_STANDARD 17)

add_executable(P1_MIA_202003894 main.cpp Analizador/Analizador.cpp Analizador/Analizador.h "Estructuras y Objetos/Disco.cpp" "Estructuras y Objetos/Disco.h" "Estructuras y Objetos/Estructura.h" "Estructuras y Objetos/Reporte.cpp" "Estructuras y Objetos/Reporte.h" "Estructuras y Objetos/Reporte.h" "Estructuras y Objetos/Particion.cpp" "Estructuras y Objetos/Particion.h" "Estructuras y Objetos/ListaMount.cpp" "Estructuras y Objetos/ListaMount.h" "Estructuras y Objetos/NodoMount.cpp" "Estructuras y Objetos/NodoMount.h" "Estructuras y Objetos/Usuario.cpp" "Estructuras y Objetos/Usuario.h" "Estructuras y Objetos/AdminUsuario.cpp" "Estructuras y Objetos/AdminUsuario.h" "Estructuras y Objetos/GestorArchivos.cpp" "Estructuras y Objetos/GestorArchivos.h")
